# ApuluStudio

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROJECT_STATUS.md  docker-compose.prod.yml  docker-compose.yml  render.yaml  start.bat  stop.bat  vercel.json
.github/: markdown-link-check.json
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  create_test_user.py  pyproject.toml  requirements.txt  uvicorn.err  uvicorn.out
backend/alembic/: env.py
backend/alembic/versions/: 2fc79e3f99fd_initial_migration.py  add_oauth_state_table.py  add_preferred_aspect_ratio.py  add_user_hashed_password.py  encrypt_oauth_tokens.py  merge_oauth_and_password_heads.py  postgres_patterns_optimization.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  accounts.py  ai.py  analytics.py  auth.py  inbox.py  posts.py
backend/app/core/: config.py  constants.py  database.py  db_utils.py  encryption.py  exceptions.py  http_client.py  logger.py  middleware.py  retry.py  security.py  utils.py
backend/app/models/: __init__.py  engagement.py  oauth_state.py  post.py  social_account.py  user.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  engagement.py  post.py  social_account.py
backend/app/scripts/: __init__.py  encrypt_existing_tokens.py
backend/app/services/: __init__.py  ai_service.py  background_scheduler.py  late_sync.py  late_sync_scheduler.py  media_processor.py  media_utils.py  platform_factory.py  post_publisher.py  scheduler_service.py  smart_scheduler.py  storage_service.py
backend/tests/: TEST_COVERAGE_REPORT.md  __init__.py  conftest.py
backend/tests/api/: __init__.py  test_accounts_oauth.py  test_posts_api.py
backend/tests/unit/: __init__.py  test_background_scheduler.py  test_platform_requirements.py  test_smart_scheduler.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CREDENTIAL_ROTATION.md  DEPLOYMENT.md  (+2 more)
(+49 files in other folders)
